--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aos": "^3.0.0-beta.6",
     "graphql": "^16.5.0",
     "next": "12.2.3",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
