--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.2",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "aos": "^3.0.0-beta.6",
     "graphql": "^16.5.0",
     "next": "12.2.3",
