--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "12.2.3",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sanitize-html": "^2.7.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
