--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.9.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "aos": "^3.0.0-beta.6",
+    "google-map-react": "^2.2.0",
     "graphql": "^16.5.0",
     "next": "12.2.3",
     "prettier-plugin-tailwindcss": "^0.1.13",
