--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.0.8",
     "sanitize-html": "^2.7.1"
   },
   "devDependencies": {
