--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "google-map-react": "^2.2.0",
     "graphql": "^16.5.0",
     "next": "12.2.3",
+    "next-auth": "^4.10.3",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
