--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@mui/material": "^5.9.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "aos": "^3.0.0-beta.6",
+    "firebase": "^9.9.3",
     "google-map-react": "^2.2.0",
     "graphql": "^16.5.0",
     "next": "12.2.3",
-    "next-auth": "^4.10.3",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
